mongo uri changed

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/real-estate
+MONGO_URI=mongodb+srv://FCUser:quCdQf7G962cxPt@fc-a7g8r.gcp.mongodb.net/test?retryWrites=true&w=majority
 PORT=4000
 JWT_SECRET=3af2f376ddafca9f6f3601ef107d2d345497ba4b4d56916f
